--- a/source/_posts/2019-01-15-blog.md
+++ b/source/_posts/2019-01-15-blog.md
@@ -1,7 +1,9 @@
 ---
 title: 블로그 신규 개설
 date: 2019-01-15 23:06:26
+category: Gossip
 tags: tldr
+thumbnail: https://cdn1.iconfinder.com/data/icons/main-ui-elements-with-colour-bg/512/refresh-512.png
 ---
 
 Hexo로 블로그를 새로 개설하게 되었다. 기존에 사용하던 블로그는 digital ocean에서 wordpress로 서비스 하고 있었다. 부끄러운 이야기지만 서버가 해킹당해서 서버의 블로그 데이터를 백업하지 못한채 몽땅 날려버렸다. digital ocean에서 제공하는 백업 서비스에도 내용이 없는거 보니 데이터가 날아간지 최소 한달은 된 거 같았다.
