--- a/source/_posts/2019-01-15-blog.md
+++ b/source/_posts/2019-01-15-blog.md
@@ -1,7 +1,7 @@
 ---
 title: 블로그 신규 개설
 date: 2019-01-15 23:06:26
-category: Gossip
+category: [Gossip, diary]
 tags: tldr
 thumbnail: https://cdn1.iconfinder.com/data/icons/main-ui-elements-with-colour-bg/512/refresh-512.png
 ---
